# derms-v2

./: .gitignore  Dockerfile  Makefile  README.md  Untitled.ipynb  docker-compose.yml  healthcheck.py  pyproject.toml  requirements.txt  test.py  wsgi.py
backend/: __init__.py  app.py  configs.py  magic.py
backend/api/: __init__.py  common.py
backend/commands/: __init__.py  cache.py  clean.py
backend/database/: __init__.py  base.py  column.py  mixins.py  model.py  types.py
backend/extensions/: __init__.py  blueprints.py  cbiot.py  core_api.py
backend/models/: __init__.py  activations.py  alarms.py  battery.py  battery_details.py  load.py  power_quality.py  programs.py  result.py  user.py
backend/serializers/: __init__.py  activation.py  alarms.py  battery.py  battery_details.py  load.py  power_quality.py  program.py  result.py
backend/tasks/: __init__.py  cbiot.py  inputs.py  utils.py
backend/utils/: __init__.py  date.py  misc.py  requests.py  url.py
docker/: docker-bootstrap.sh  docker-entrypoint.sh  docker-init.sh
docs/: DERMS.md
manifests/: deployment.yml  ingress-production.yaml  ingress-staging.yml  service.yml
manifests/configmap/: db-config-staging.yml  db-config.yml  redis-config-staging.yml  redis-config.yml
manifests/secret/: db-secret-staging.yml  db-secret.yml
migrations/: script.py.mako
migrations/versions/: 092418c0e1fd_.py  178065f3a56d_.py  2d058eb2d2a8_.py  4d500ac9f418_.py  51291767c175_.py  744cc6f867a8_.py  7796538b99d3_.py  7dd9d2ba0a2a_.py  7fb75948ac83_.py  babb945acc6a_.py  (+4 more)
postman/: DERMS_v8.7.postman_collection.json
(+37 files in other folders)
